k8s-clusters/infrastructure/configs/networkpolicy-certman.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-certmanager-acme
  namespace: flux-system
spec:
  policyTypes:
  - Ingress
  podSelector: # allow the certmanager http server (for ACME protocol) to be reached from LetsEncrypt
    matchExpressions: # Look for the labels but ignore their contents
    - {key: acme.cert-manager.io/http-domain, operator: Exists}
    - {key: acme.cert-manager.io/http-token, operator: Exists}
  ingress: # allow from anywhere inside the cluster or on the internet
  - from: []
